# NVSentinel

./: .coderabbit.yaml  .ctlptl.yaml  .gitignore  .golangci.yml  .ko.yaml  .versions.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  Tiltfile  build_image_list.sh  ci.Dockerfile  code-of-conduct.md  common.mk  container_scan_policy.json  ctlptl-config.yaml  license-header.txt
.github/: PULL_REQUEST_TEMPLATE.md  ci.Dockerfile  copilot-instructions.md  copy-pr-bot.yaml  dco.yml  dependabot.yml  labeler.yml
api/: go.mod  go.sum
commons/: Makefile  go.mod  go.sum
data-models/: Makefile  go.mod  go.sum
dev/: Makefile
docker/: Makefile
docs/: DATA_FLOW.md  INTEGRATION.md  INTEGRATIONS.md  LOG_COLLECTION.md  METRICS.md  OVERVIEW.md  README.md  audit-logging.md  circuit-breaker.md  fault-quarantine.md  gpu-health-monitor.md  index.yml  kubernetes-object-monitor.md  labeler.md  node-drainer.md  platform-connectors.md  preflight.md
event-exporter/: go.mod  go.sum  main.go
fault-quarantine/: Makefile  Tiltfile  go.mod  go.sum  main.go
fault-quarantine-module/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
fault-remediation/: Makefile  Tiltfile  go.mod  go.sum  main.go
fault-remediation-module/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
fern/: docs.yml  fern.config.json
gpu-reset/: Dockerfile  gpu_reset.sh
health-events-analyzer/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
health-monitors/: Makefile
janitor/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
janitor-provider/: go.mod  go.sum
labeler/: Makefile  Tiltfile  go.mod  go.sum  main.go
labeler-module/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
log-collector/: Dockerfile  Dockerfile.cleanup  Makefile  entrypoint.sh  mock-must-gather.sh  mock-nvidia-bug-report.sh  pyproject.toml
make/: common.mk  docker.mk  go.mk  python.mk
metadata-collector/: Dockerfile  Makefile  go.mod  go.sum  main.go
node-drainer/: Makefile  Tiltfile  go.mod  go.sum  main.go
node-drainer-module/: Dockerfile  Makefile  Tiltfile  go.mod  go.sum  main.go
nvsentinel-log-collector/: Dockerfile  Dockerfile.cleanup  Makefile  Tiltfile  entrypoint.sh
platform-connectors/: Dockerfile  Makefile  README.md  Tiltfile  go.mod  go.sum  main.go  main_test.go
preflight/: Makefile  go.mod  go.sum  main.go
preflight-checks/nccl-allreduce/: Dockerfile  Makefile  pyproject.toml
protobufs/: README.md  platformconnector.proto
scripts/: Makefile  build-image-list.sh  build_image_list.sh  buildko  buildko.sh  check-image-attestations.sh  configure-ctlptl-registry.sh  ko-tilt-build.sh  replace-docker-registry.sh  replace-imports.sh  setup-dev-env.sh  update-dockerfile-versions.sh  update-docs-helm-version.py  validate-gomod.sh  validate-nvsentinel.sh  verify-image-provenance.sh  verify-slsa-provenance.sh
statemanager/: Makefile  go.mod  go.sum  metrics.go  statemanager.go  statemanager_test.go  statemanagermock.go
store-client-sdk/: Makefile  (+2 more)
(+983 files in other folders)
